force-app/main/default/objects/AnonymizationConfiguration__mdt/AnonymizationConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Anonymization Configuration</label>
    <pluralLabel>Anonymization Configurations</pluralLabel>
</CustomObject>