force-app/main/default/objects/AnonymizationConfiguration__mdt/fields/AnonymizationTTLInDays__c.field-meta.xml
<CustomField>
    <fullName>AnonymizationTTLInDays__c</fullName>
    <label>Anonymization TTL In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>