force-app/main/default/objects/AnonymizationConfiguration__mdt/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <defaultValue>&quot;BaseAnonymizator&quot;</defaultValue>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>