force-app/main/default/objects/AnonymizationConfiguration__mdt/fields/DeletionTTLInDays__c.field-meta.xml
<CustomField>
    <fullName>DeletionTTLInDays__c</fullName>
    <label>Deletion TTL In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>