force-app/main/default/objects/AnonymizationConfiguration__mdt/fields/FieldSetAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldSetAPIName__c</fullName>
    <label>Field Set API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>