force-app/main/default/objects/AnonymizationConfiguration__mdt/fields/SobjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SobjectAPIName__c</fullName>
    <label>Sobject API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>